--- a/viz.Rmd
+++ b/viz.Rmd
@@ -2,7 +2,7 @@
 title: "viz"
 author: "Federica Coelli"
 date: "16 april 2016"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
